# options-calculator

./: .gitignore  CMakeLists.txt  README.md  important_commands.txt  packages.txt  requirements.txt  streamlit_app.py
.streamlit/: secrets.toml
cpp-engine/: .gitignore
cpp-engine/include/: calculator.h
cpp-engine/src/: calculator.cpp  main.cpp
cpp-engine/tests/: calculator_tests.cpp
include/: calculator.h
python-backend/flaskr/: server.py
react-frontend/: package-lock.json  package.json
react-frontend/client/: package-lock.json  package.json
react-frontend/client/src/: App.js
src/: calculator.cpp  main.cpp
tests/: calculator_tests.cpp
